fixed device service, to allow for devices to patch their own sensors and actions
