# services/core/device/app/device_api.py
@@ -44,7 +44,19 @@ def patch_sensor_values(deviceid, sensorname):
         if sensordata[0] == sensorname:
             sensor_id = sensordata[1]
             break
-    requests.patch("http://sensor-service:5900/v1/devices/{0}/sensors/{1}".format(deviceid, sensor_id), json=sensor_patch)
+    requests.patch("http://sensor-service:5800/v1/devices/{0}/sensors/{1}".format(deviceid, sensor_id), json=sensor_patch)
 
     #When sensor is found, make get request for sensor
     #When sensor is retrieved, update sensor with body and make patch request
+
+def patch_action_values(deviceid, actionname):
+    device = requests.get("http://device-access:5500/v1/devices/{}".format(deviceid)).json()
+    action_patch = request.json()
+
+    #Iterate thorugh the list of actions and match actionid
+    for x in device["actions"]:
+        actiondata=x.split(':')
+        if actiondata[0] == actionname:
+            action_id = actiondata[1]
+            break
+    requests.patch("http://action-service:5900/v1/devices/{0}/actions/{1}".format(deviceid, action_id), json=action_patch)
